# qa_guru_lesson_23

./: .gitignore  README.md  config.personal.env.example  config.py  pyproject.toml  pytest.ini
lesson_5_23_mobile_autotests_with_Browserstack/helpers/: file.py
lesson_5_23_mobile_autotests_with_Browserstack/helpers/allure/: attach.py
lesson_5_23_mobile_autotests_with_Browserstack/helpers/browserstack/: video.py
tests/android/: conftest.py  test_wikipedia.py
